--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -33,12 +33,17 @@
     margin: 0;
     padding: 0;
     list-style: none;
+
 }
 
 .topListItem{
     margin-right: 20px;
     font-size: 18ppx;
     font-weight: 300;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+}
