--- a/src/components/singlePost/SinglePost.css
+++ b/src/components/singlePost/SinglePost.css
@@ -16,8 +16,15 @@
 
 .singlePostTitle{
     text-align: center;
+    width: 100%;
     margin: 10px;
     font-size: 28px;
+}
+
+.singlePostTitleInput{
+    font-size: 28px;
+    padding: 20px;
+    width: 50vw;
 }
 
 .singlePostEdit{
@@ -38,6 +45,7 @@ i{
     display: flex;
     justify-content: space-between;
     font-size: 16px;
+    width: 100%;
     color: #b39656;
 }
 
@@ -46,6 +54,14 @@ i{
     color: #666;
     font-size: 18px;
     line-height: 25px;
+    width: 100%;
+    padding: 20px;
+}
+
+.singlePostDescInput{
+    font-size: 28px;
+    padding: 20px;
+    width: 50vw;
 }
 
 .singlePostDesc::first-letter{
@@ -53,3 +69,28 @@ i{
     font-size: 30px;
     font-weight: 600;
 }
+
+.update{
+    position: absolute;
+    cursor: pointer;
+    left: 12%;
+    top: 110%;
+    color: #090909;
+    padding: 0.7em 1.7em;
+    font-size: 18px;
+    border-radius: 0.5em;
+    background: #e8e8e8;
+    border: 1px solid #e8e8e8;
+    transition: all .3s;
+    box-shadow: 6px 6px 12px #c5c5c5,
+               -6px -6px 12px #ffffff;
+}
+  
+  button:hover {
+    border: 1px solid white;
+  }
+  
+  button:active {
+    box-shadow: 4px 4px 12px #c5c5c5,
+               -4px -4px 12px #ffffff;
+  }
