--- a/src/components/topbar/Topbar.css
+++ b/src/components/topbar/Topbar.css
@@ -17,10 +17,7 @@
 
 
 .topImg{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+    font-size: 1.5em;
 }
 
 .topCenter{
